--- a/people.html
+++ b/people.html
@@ -233,22 +233,22 @@
 
 <tr>
 	<td style="width: 124px;">
-		<a href="#" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/pichengzhao.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
+		<a href="https://www.linkedin.com/in/picheng-zhao-69012130/" style="color: rgb(255, 102, 0);"><img height="124" src="./people/pictures/pichengzhao.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 276px;" valign="top">
 		<p><a href="#" style="color: rgb(255, 102, 0);"><strong>Picheng Zhao</strong></a><br />
+			    Scientist II <br/>
 				Research Interest:<br />
-				Serine protease homologue, Insect melanization<br />
-				Phone: (405) 780-2992<br /><a href="mailto:picheng.zhao@okstate.edu" style="color: rgb(255, 102, 0);">picheng.zhao@okstate.edu</a></p>
+				Insect innate immunity<br /><a href="mailto:picheng.zhao@okstate.edu" style="color: rgb(255, 102, 0);">picheng.zhao@okstate.edu</a></p>
 	</td>
 	<td style="width: 124px;">
-		<a href="#" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/yingxiahu.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
+		<a href="#https://www.linkedin.com/in/yingxia-h-1a08901b/" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/yingxiahu.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 293px;" valign="top">
 		<a href="#" style="color: rgb(255, 102, 0);"><strong>Yingxia Hu </strong></a><br />
 				Research Interest:<br />
 				Serine protease homologue, Insect melanization<br />
-				Phone: (201) 539-0389<br /><a href="mailto:yingxia.hu@yale.edu" style="color: rgb(255, 102, 0);">yingxia.hu@yale.edu</a>
+				<a href="mailto:yingxia.hu@yale.edu" style="color: rgb(255, 102, 0);">yingxia.hu@yale.edu</a>
 	</td>
 	<td style="width: 2px;"></td>
 	<td style="width: 4px;" valign="top"> </td>
@@ -266,7 +266,7 @@
 				Phone: (405) 780-2992<br /><a href="mailto:qjin@okstate.edu" style="color: rgb(255, 102, 0);">xiaolong.cao@okstate.edu</a></p>
 	</td>
 	<td style="width: 124px;">
-		<a href="#" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/heyan.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
+		<a href="#https://www.linkedin.com/in/yanhe88" style="color: rgb(255, 102, 0);"><img alt="" height="124" src="./people/pictures/heyan.jpg" style="border: 0px currentColor; border-image: none; margin-left: 8px;" width="96" /></a>
 	</td>
 	<td style="width: 293px;" valign="top">
 		<a href="#" style="color: rgb(255, 102, 0);"><strong>Yan He </strong></a><br />
