--- a/people.html
+++ b/people.html
@@ -84,11 +84,12 @@
        
   <div class="content clearfix">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p> </p>
-<hr align="center" color="#ff7700" size="1" width="100%" /><p> </p>
-<p> </p>
+<!-- <hr align="center" color="#ff7700" size="1" width="100%" /> -->
+<!-- <p> </p> -->
+<!-- <p> </p> -->
 
 <!-- Table -->
-<table align="center" border="0" cellpadding="1" cellspacing="0" style="color: rgb(51, 51, 51); width: 832px;" width="100%">
+<table align="center" border="0" cellpadding="0" cellspacing="0" style="color: rgb(51, 51, 51); width: 832px;" width="100%">
 <tbody>
 
 <!-- Faculty & Staff -->
